# fse-final

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/templates/: index.html
tests/: test_api.py
